# gambit_grail

./: Dockerfile  Dockerfile.develop  README.md  notes.md  pyproject.toml  requirements.txt  run.sh
src/gambit/: board.py  fen.py  gambit_tree.py  gambits.pgn  main.py  pgn.py  setup.py
src/gambit/gambit/: board.py  fen.py  gambit_tree.py  main.py  pgn.py  util.py
src/gambit/tests/: board_test.py  conftest.py  fen_test.py
src/gambit/tests/test_data/: chesscom1.pgn  cormorant_gambit.pgn
